better docs and logging

--- a/connect-kusto-sink.properties
+++ b/connect-kusto-sink.properties
@@ -1,23 +1,13 @@
 connector.class=com.microsoft.azure.kusto.kafka.connect.sink.KustoSinkConnector
-# Name of the connector
-name=azure-kusto-sink
-# Maximum number of tasks that should be created for this connector.
+#kusto.sink.flush_interval_ms=1000 * 60
 tasks.max=1
-topics=logs
-key.ignore=true
-schema.ignore=true
-# Kafka topics to which the messages should be written to be sent to the Kusto
-#kusto.url=https://{cluster_name}.kusto.windows.net
-#kusto.db={db_name}
-#kusto.table={table_name}
-#kusto.tables.topics_mapping=logs:logs_table;
-# 10MB
-#kusto.sink.flush_size=1024*1024*10
-# 10 Minutes
-#kusto.sink.flush_interval_ms=60*10
-#kusto.auth.username={my_username}
-#kusto.auth.password={my_password}
-# appid/secret
-#kusto.auth.appid={my_app_id}
-#kusto.auth.appkey={my_app_key}
-#kusto.auth.authority=
+#topics=topic1,topic2
+#kusto.tables.topics_mapping=[{'topic': 'topic1','db': 'db_name', 'table': 'table_name','format': 'json', 'mapping':'Mapping'},{'topic': 'topic2','db': 'db_name', 'table': 'table_name2'}]
+#kusto.auth.authority=XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX
+#kusto.url=https://ingest-{cluster}.kusto.windows.net/
+#kusto.auth.appid=XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX
+#kusto.auth.appkey=ZZZZZZZZZZZZZZZZZZZZZZZ
+#kusto.sink.tempdir=/var/tmp/
+#kusto.sink.flush_size=1000
+value.converter=org.apache.kafka.connect.storage.StringConverter
+key.converter=org.apache.kafka.connect.storage.StringConverter
