--- a/pom.xml
+++ b/pom.xml
@@ -70,9 +70,14 @@
     </properties>
     <dependencies>
         <dependency>
-            <groupId>com.github.Azure</groupId>
-            <artifactId>azure-kusto-java</artifactId>
-            <version>v0.2.0</version>
+            <groupId>com.microsoft.azure.kusto</groupId>
+            <artifactId>kusto-data</artifactId>
+            <version>1.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.microsoft.azure.kusto</groupId>
+            <artifactId>kusto-ingest</artifactId>
+            <version>1.1.0</version>
         </dependency>
         <dependency>
             <groupId>org.testng</groupId>
