--- a/pom.xml
+++ b/pom.xml
@@ -66,19 +66,19 @@
         <kafka.version>1.0.0</kafka.version>
         <json.version>20090211</json.version>
         <commonio.version>2.6</commonio.version>
-        <kusto-sdk.version>1.3.0</kusto-sdk.version>
+        <kusto-sdk.version>1.4.0</kusto-sdk.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     <dependencies>
         <dependency>
             <groupId>com.microsoft.azure.kusto</groupId>
             <artifactId>kusto-data</artifactId>
-            <version>1.3.0</version>
+            <version>${kusto-sdk.version}</version>
         </dependency>
         <dependency>
             <groupId>com.microsoft.azure.kusto</groupId>
             <artifactId>kusto-ingest</artifactId>
-            <version>1.3.0</version>
+            <version>${kusto-sdk.version}</version>
         </dependency>
         <dependency>
             <groupId>org.testng</groupId>
