--- a/connect-kusto-sink.properties
+++ b/connect-kusto-sink.properties
@@ -1,13 +1,35 @@
 connector.class=com.microsoft.azure.kusto.kafka.connect.sink.KustoSinkConnector
-#kusto.sink.flush_interval_ms=1000 * 60
+
 tasks.max=1
 #topics=topic1,topic2
-#kusto.tables.topics_mapping=[{'topic': 'topic1','db': 'db_name', 'table': 'table_name','format': 'json', 'mapping':'Mapping'},{'topic': 'topic2','db': 'db_name', 'table': 'table_name2'}]
-#kusto.auth.authority=XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX
+
 #kusto.url=https://ingest-{cluster}.kusto.windows.net/
-#kusto.auth.appid=XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX
-#kusto.auth.appkey=ZZZZZZZZZZZZZZZZZZZZZZZ
+
+#kusto.tables.topics.mapping=[{'topic': 'topic1','db': 'db_name', 'table': 'table_name','format': 'json', 'mapping':'Mapping'},{'topic': 'topic2','db': 'db_name', 'table': 'table_name2'}]
+
+#kusto.auth.username=user1
+#kusto.auth.password=xxxxxxxx
+
+#aad.auth.appid=XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX
+#aad.auth.appkey=ZZZZZZZZZZZZZZZZZZZZZZZ
+#aad.auth.authority=XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX
+
 #kusto.sink.tempdir=/var/tmp/
-#kusto.sink.flush_size=1000
+#flush.size.bytes=1000
+#flush.interval.ms=1000 * 60
+
+#error.tolerance=NONE
+
+#dlq.bootstrap.servers=localhost:9092
+#dlq.topic.name=test-topic-error
+
+#max.retry.time.ms=60000
+#retry.backoff.time.ms=5000
+
 value.converter=org.apache.kafka.connect.storage.StringConverter
 key.converter=org.apache.kafka.connect.storage.StringConverter
+
+####Deprecated Configurations####
+#kusto.tables.topics_mapping=[{'topic': 'topic1','db': 'db_name', 'table': 'table_name','format': 'json', 'mapping':'Mapping'},{'topic': 'topic2','db': 'db_name', 'table': 'table_name2'}]
+#kusto.sink.flush_size=1000
+#kusto.sink.flush_interval_ms=1000 * 60
