--- a/connect-kusto-sink.properties
+++ b/connect-kusto-sink.properties
@@ -5,7 +5,7 @@ tasks.max=1
 
 #kusto.url=https://ingest-{cluster}.kusto.windows.net/
 
-#kusto.tables.topics.mapping=[{'topic': 'topic1','db': 'db_name', 'table': 'table_name','format': 'json', 'mapping':'Mapping'},{'topic': 'topic2','db': 'db_name', 'table': 'table_name2'}]
+#kusto.tables.topics.mapping=[{'topic': 'testing1','db': 'daniel', 'table': 'KafkaTest','format': 'json', 'mapping':'JsonMapping'},{'topic': 'testing2','db': 'daniel', 'table': 'KafkaTest','format': 'csv', 'mapping':'CsvMapping', 'eventDataCompression':'gz'}] 
 
 #kusto.auth.username=user1
 #kusto.auth.password=xxxxxxxx
