removed auth.user, auth.pass support | changed aad configs to mandatory

--- a/connect-kusto-sink.properties
+++ b/connect-kusto-sink.properties
@@ -1,14 +1,11 @@
 connector.class=com.microsoft.azure.kusto.kafka.connect.sink.KustoSinkConnector
 
 tasks.max=1
-#topics=topic1,topic2
+#topics=testing1,testing2
 
 #kusto.url=https://ingest-{cluster}.kusto.windows.net/
 
-#kusto.tables.topics.mapping=[{'topic': 'testing1','db': 'daniel', 'table': 'KafkaTest','format': 'json', 'mapping':'JsonMapping'},{'topic': 'testing2','db': 'daniel', 'table': 'KafkaTest','format': 'csv', 'mapping':'CsvMapping', 'eventDataCompression':'gz'}] 
-
-#kusto.auth.username=user1
-#kusto.auth.password=xxxxxxxx
+#kusto.tables.topics.mapping=[{'topic': 'testing1','db': 'test_db', 'table': 'test_table_1','format': 'json', 'mapping':'JsonMapping'},{'topic': 'testing2','db': 'test_db', 'table': 'test_table_2','format': 'csv', 'mapping':'CsvMapping', 'eventDataCompression':'gz'}] 
 
 #aad.auth.appid=XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX
 #aad.auth.appkey=ZZZZZZZZZZZZZZZZZZZZZZZ
