removed event copression data

--- a/connect-kusto-sink.properties
+++ b/connect-kusto-sink.properties
@@ -5,7 +5,7 @@ tasks.max=1
 
 #kusto.url=https://ingest-{cluster}.kusto.windows.net/
 
-#kusto.tables.topics.mapping=[{'topic': 'testing1','db': 'test_db', 'table': 'test_table_1','format': 'json', 'mapping':'JsonMapping'},{'topic': 'testing2','db': 'test_db', 'table': 'test_table_2','format': 'csv', 'mapping':'CsvMapping', 'eventDataCompression':'gz'}] 
+#kusto.tables.topics.mapping=[{'topic': 'testing1','db': 'test_db', 'table': 'test_table_1','format': 'json', 'mapping':'JsonMapping'},{'topic': 'testing2','db': 'test_db', 'table': 'test_table_2','format': 'csv', 'mapping':'CsvMapping'}]
 
 #aad.auth.appid=XXXXXXXX-XXXX-XXXX-XXXX-XXXXXXXXXXXX
 #aad.auth.appkey=ZZZZZZZZZZZZZZZZZZZZZZZ
