Changing dlq. to misc.deadletterqueue.

--- a/connect-kusto-sink.properties
+++ b/connect-kusto-sink.properties
@@ -17,8 +17,8 @@ tasks.max=1
 
 #behavior.on.error=FAIL
 
-#dlq.bootstrap.servers=localhost:9092
-#dlq.topic.name=test-topic-error
+#misc.deadletterqueue.bootstrap.servers=localhost:9092
+#misc.deadletterqueue.topic.name=test-topic-error
 
 #errors.retry.max.time.ms=60000
 #errors.retry.backoff.time.ms=5000
