resolve PR comments

--- a/connect-kusto-sink.properties
+++ b/connect-kusto-sink.properties
@@ -20,6 +20,11 @@ tasks.max=1
 #misc.deadletterqueue.bootstrap.servers=localhost:9092
 #misc.deadletterqueue.topic.name=test-topic-error
 
+#errors.tolerance=all
+#errors.deadletterqueue.topic.name=connect-dlq-topic
+#errors.deadletterqueue.topic.replication.factor=1
+#errors.deadletterqueue.context.headers.enable=true
+
 #errors.retry.max.time.ms=60000
 #errors.retry.backoff.time.ms=5000
 
