--- a/config/connect-kusto-sink.properties
+++ b/config/connect-kusto-sink.properties
@@ -1,4 +1,4 @@
-name=AzureKustoSinkConnector
+name=KustoSinkConnector
 connector.class=com.microsoft.azure.kusto.kafka.connect.sink.KustoSinkConnector
 tasks.max=1
 #topics=testing1,testing2
