Connect build fix (#35)
* merged Azure/master

* Restructing project structure

* updated readme.md and pom.xml

* resolving PR comments

* removing unnecessary plugin

Co-authored-by: fahad <hasher@192.168.0.102>
Co-authored-by: fahad <hasher@localhost>
Co-authored-by: SanchayGupta1197 <sanchay.gupta@hashedin.com>

--- a/config/connect-kusto-sink.properties
+++ b/config/connect-kusto-sink.properties
@@ -1,5 +1,5 @@
+name=KustoSinkConnector
 connector.class=com.microsoft.azure.kusto.kafka.connect.sink.KustoSinkConnector
-
 tasks.max=1
 #topics=testing1,testing2
 
