--- a/config/connect-kusto-sink.properties
+++ b/config/connect-kusto-sink.properties
@@ -4,6 +4,7 @@ tasks.max=1
 #topics=testing1,testing2
 
 #kusto.url=https://ingest-{cluster}.kusto.windows.net/
+#kusto.engine.url=https://{cluster}.kusto.windows.net/
 
 #kusto.tables.topics.mapping=[{'topic': 'testing1','db': 'test_db', 'table': 'test_table_1','format': 'json', 'mapping':'JsonMapping'},{'topic': 'testing2','db': 'test_db', 'table': 'test_table_2','format': 'csv', 'mapping':'CsvMapping'}]
 
