Upgrade pom version in order to release with fix to Issue 41 (FETCH_TABLE_QUERY result throws exception due to being cast to int).

--- a/config/connect-kusto-sink.properties
+++ b/config/connect-kusto-sink.properties
@@ -3,8 +3,8 @@ connector.class=com.microsoft.azure.kusto.kafka.connect.sink.KustoSinkConnector
 tasks.max=1
 #topics=testing1,testing2
 
-#kusto.url=https://ingest-{cluster}.kusto.windows.net/
-#kusto.engine.url=https://{cluster}.kusto.windows.net/
+#kusto.ingestion.url=https://ingest-{cluster}.kusto.windows.net/
+#kusto.query.url=https://{cluster}.kusto.windows.net/
 
 #kusto.tables.topics.mapping=[{'topic': 'testing1','db': 'test_db', 'table': 'test_table_1','format': 'json', 'mapping':'JsonMapping'},{'topic': 'testing2','db': 'test_db', 'table': 'test_table_2','format': 'csv', 'mapping':'CsvMapping'}]
 
