--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <junit.version>5.8.2</junit.version>
         <commonio.version>2.11.0</commonio.version>
         <kusto-sdk.version>3.1.3</kusto-sdk.version>
+        <jackson-version>2.13.3</jackson-version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
     <build>
@@ -141,7 +142,7 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.13.3</version>
+            <version>${jackson-version}</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
